# only-50k-very-cheap

./: .env.example  .gitignore  bot.py  pyproject.toml
cogs/: demons.py  famima.py  feeds.py  hvn.py  luna.py  misc.py
database/: schema.sql
resources/: graduation.typ  termination.typ
scrapers/: __init__.py
scrapers/source/: __init__.py  types.py
scrapers/sources/: blogtruyen.py  hvn.py
