[project]
name = "hoi-minim"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.11.13",
    "aiosqlite>=0.21.0",
    "beautifulsoup4>=4.13.3",
    "discord-py>=2.5.0",
    "homoglyphs>=2.0.4",
    "python-dotenv>=1.0.1",
    "reader>=3.16",
    "typst>=0.13.0",
    "yarl>=1.18.3",
]

[tool.basedpyright]
typeCheckingMode = "standard"

[dependency-groups]
dev = [
    "basedpyright>=1.28.0",
    "ruff>=0.9.8",
]
